--- a/200922_regression_norm_eqn/index.html
+++ b/200922_regression_norm_eqn/index.html
@@ -40,6 +40,7 @@
 
 <span class="nbk_directive"><i>20/09/22 - Linear Regression as Geometric Projection</i></span>
 
+<div class="skinny_math">
 This note illustrates a geometric interpretation of multivariate linear regression, which I have found to be the most intuitive way to think of regression problems.
 
 Given a feature matrix \(X\), and output vector \(y\), the objective of linear regression is to calculate a set of coefficients B that when linearly combined with \(X\) produces a new vector \(\hat{y}\).
@@ -103,6 +104,7 @@ Since \(\hat{y} = X B\)
 \(\begin{align}
 P &= X (X^T X)^{-1} X^T \\
 \end{align}\)
+</div>
 <!-- autoescape off to allow images. Debug why safe filter isn't working
      ref for indent: https://jinja.palletsprojects.com/en/master/templates/#indent -->
 <body>
