--- a/220701_causality_tamil_grammar/index.html
+++ b/220701_causality_tamil_grammar/index.html
@@ -40,11 +40,7 @@
 
 <span class="nbk_directive"><i>22/07/01 - Cause and Effect Chaining in Tamil Grammar</i></span>
 
-Something that has bothered me for a while, is the way complex Tamil sentences structure causality in a very idiosyncratic way, to me. By causality here, I mean reasoning about the relationships between a cause and it’s subsequent effect. The subsequent effect can be another cause, which then propogates a new effect, and so causal reasoning about complex topics can occur when chaining togheter multiple preceding causes and effects as a sort of heavily composed function (effect_n(…(effect_2(effect_1(cause_1)))…).
-
-My idle suspicion is that the grammatical structure of Tamil doesn’t map to this nested function approach to causality, in the same way English does, which is why complex sentences seems idiosyncratic to me. A corrollarly is the way myself, and other second-geneartion immigrant Tamils rely heavily on conditional conjunctions that tend not to be used by native speakers, to align Tamil with our preference for the way English grammar maps to causality.
-
-Note that, I don’t think this has any impact of actual causal reasoning. The recursive nature of languages seem to have evolved to be very flexible, and minor changes to the Tamil syntax can accomodate the linear cause-effect chains easily. I think this is something that occurs at the level of grammar and fluency only.
+Something that has bothered me for a while, is the way complex Tamil sentences structure causality in a very idiosyncratic way, to me. By causality here, I mean reasoning about the relationships between a cause and it’s subsequent effect. The subsequent effect can be another cause, which then propogates a new effect, and so causal reasoning about complex topics can occur when chaining together multiple preceding causes and effects as a sort of heavily composed function (effect_n(…(effect_2(effect_1(cause_1)))…).
 
 The specific grammar differences I am refering to is the way Tamil inverts the subject, verb, object order of a clause. Here’s I’ll parse a single clause “the heat caused a crisis” with a clear cause-effect structure.
 
